# PromptChain

./: .gitignore  .promptchainrc  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
program/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
program/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
program/.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1784662083655828  MANIFEST-000021
program/programs/curation/: Cargo.toml
program/programs/curation/src/: errors.rs  lib.rs
program/programs/curation/src/instructions/: commit_index.rs  init_curator.rs  init_reputation.rs  mod.rs  refresh_curation.rs  resolve_slashing.rs  submit_rating.rs  update_reputation.rs  update_stake.rs
program/programs/curation/src/state/: curator.rs  index_commitment.rs  mod.rs  prompt_curation.rs  rating.rs  reputation.rs
program/programs/governance/: Cargo.toml
program/programs/governance/src/: errors.rs  lib.rs
program/programs/governance/src/instructions/: cast_vote.rs  create_proposal.rs  execute_proposal.rs  init_dao.rs  init_member.rs  mod.rs
program/programs/governance/src/state/: dao_config.rs  member.rs  mod.rs  proposal.rs  vote.rs
program/programs/promptchain/: Cargo.toml
program/programs/promptchain-rlhf/: Cargo.toml
program/programs/promptchain-rlhf/src/: errors.rs  lib.rs
program/programs/promptchain-rlhf/src/instructions/: claim_reward.rs  finalize_session.rs  init_session.rs  mod.rs  submit_preference.rs  submit_rating.rs
program/programs/promptchain-rlhf/src/state/: mod.rs  preference.rs  rating.rs  reward.rs  session.rs
program/programs/promptchain/src/: errors.rs  lib.rs
program/programs/promptchain/src/instructions/: create_version.rs  mod.rs  publish.rs  set_license.rs  transfer.rs  use_prompt.rs
program/programs/promptchain/src/state/: license.rs  mod.rs  prompt.rs  version.rs
program/programs/token-economics/: Cargo.toml
program/programs/token-economics/src/: errors.rs  lib.rs
program/programs/token-economics/src/instructions/: claim_creator_reward.rs  claim_curator_reward.rs  claim_vested.rs  init_token_config.rs  init_vesting.rs  mod.rs  stake_tokens.rs  withdraw_stake.rs
program/programs/token-economics/src/state/: mod.rs  reward_claim.rs  stake_position.rs  token_config.rs  vesting.rs
program/programs/translation-dao/: Cargo.toml
program/programs/translation-dao/src/: errors.rs  lib.rs
program/programs/translation-dao/src/instructions/: claim_translator_reward.rs  mod.rs  register_translation.rs  (+3 more)
program/tests/integration/: curation.test.ts  governance.test.ts  promptchain.test.ts  token-economics.test.ts
(+55 files in other folders)
