[workspace]
resolver = "2"
members = [
    "programs/promptchain",
    "programs/curation",
    "programs/token-economics",
    "programs/governance",
    "programs/promptchain-rlhf",
    "programs/translation-dao",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
overflow-checks = true
