[package]
name = "promptchain"
version = "0.1.0"
description = "PromptChain Kernel - A decentralized protocol for AI prompts as first-class digital assets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "promptchain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
