[package]
name = "promptchain-token-economics"
version = "0.1.0"
description = "PromptChain Token Economics - $PROMPT token, vesting, rewards, staking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "promptchain_token_economics"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
